update user docs
